brain/sources/prod-metadata/objects/Internal_Interview__c/Internal_Interview__c.object-meta.xml
<CustomObject>
    <label>Internal Interview</label>
    <nameField>
        <displayFormat>INT-{00000}</displayFormat>
        <label>Internal Interview Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>