brain/sources/prod-metadata/objects/Internal_Interview__c/fields/AI_Audio_Analysis__c.field-meta.xml
<CustomField>
    <fullName>AI_Audio_Analysis__c</fullName>
    <label>AI Audio Analysis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>