brain/sources/prod-metadata/objects/Internal_Interview__c/fields/AI_Decision__c.field-meta.xml
<CustomField>
    <fullName>AI_Decision__c</fullName>
    <label>AI Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hire</fullName>
            </value>
            <value>
                <fullName>No Hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>