brain/sources/prod-metadata/objects/Internal_Interview__c/fields/AI_Pregen_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Pregen_Status__c</fullName>
    <description>Ready = AI questions pre-generated and usable. Stale = resume changed since generation (conduct falls back to live generation). Failed: reason = generation problem to fix before the interview.</description>
    <label>AI Pregen Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>