brain/sources/prod-metadata/objects/Internal_Interview__c/fields/AI_Pregenerated_Questions__c.field-meta.xml
<CustomField>
    <fullName>AI_Pregenerated_Questions__c</fullName>
    <description>JSON blob of AI questions generated at scheduling time, per AI section. Written by AiQuestionPregenService, read by the Conduct Interview flow (AiPregenReader). Not for hand-editing.</description>
    <label>AI Pregenerated Questions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>