brain/sources/prod-metadata/objects/Internal_Interview__c/fields/AI_Total_score__c.field-meta.xml
<CustomField>
    <fullName>AI_Total_score__c</fullName>
    <label>AI Total score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>