brain/sources/prod-metadata/objects/Internal_Interview__c/fields/AI_Video_Analysis__c.field-meta.xml
<CustomField>
    <fullName>AI_Video_Analysis__c</fullName>
    <label>AI Video Analysis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>