brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Internal_Interviews</relationshipLabel>
    <relationshipName>Internal_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>