brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Candidate_Lacking_IR__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Lacking_IR__c</fullName>
    <label>Candidate Lacking (IR)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Parameter</valueSetName>
    </valueSet>
</CustomField>