brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Candidate_Training__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Training__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Candidate_Training this interview belongs to. Populated ONLY for Mock Interviews spawned from a candidate&apos;s training. Real (hire-flow) interviews leave this blank -- so this field is the discriminator: NOT NULL = Mock, NULL = real interview.</description>
    <label>Candidate Training</label>
    <referenceTo>Candidate_Training__c</referenceTo>
    <relationshipLabel>Mock Interviews</relationshipLabel>
    <relationshipName>Mock_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>