brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Combined_Score__c.field-meta.xml
<CustomField>
    <fullName>Combined_Score__c</fullName>
    <label>Combined Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>