brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Comment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Comment_Summary__c</fullName>
    <label>Comment Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>