brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Internal Interviews</relationshipLabel>
    <relationshipName>Internal_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>