brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>