brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <description>Last date by which the trainer must record a Pass/Fail result. Computed as Scheduled_Date + Mock_Result_Deadline_Days working days on insert. The daily enforcer job flags any Mock Interview past this date without a result and fires the Program_Version.Mock_Miss_Action.</description>
    <label>Result Deadline</label>
    <type>Date</type>
</CustomField>