brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Employement_Type__c.field-meta.xml
<CustomField>
    <fullName>Employement_Type__c</fullName>
    <label>Employement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>W2 Contract</fullName>
            </value>
            <value>
                <fullName>Full Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>