brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Evaluation_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Parameter__c</fullName>
    <label>Evaluation  Parameter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Evaluation_Parameter</valueSetName>
    </valueSet>
</CustomField>