brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Final_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Decision_Date__c</fullName>
    <label>Final Decision Date</label>
    <type>DateTime</type>
</CustomField>