brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Final_Descion__c.field-meta.xml
<CustomField>
    <fullName>Final_Descion__c</fullName>
    <label>Final Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hire</fullName>
            </value>
            <value>
                <fullName>NoHire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>