brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Has_Resume__c.field-meta.xml
<CustomField>
    <fullName>Has_Resume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Resume</label>
    <type>Checkbox</type>
</CustomField>