brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Hired_Niche__c.field-meta.xml
<CustomField>
    <fullName>Hired_Niche__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hired Niche</label>
    <referenceTo>Niche__c</referenceTo>
    <relationshipLabel>Internal Interviews (Hiring Niche)</relationshipLabel>
    <relationshipName>Internal_Interviews1</relationshipName>
    <type>Lookup</type>
</CustomField>