brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Human_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Human_Total_Score__c</fullName>
    <label>Human Total Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>