brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Interview_History_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interview_History_Notes__c</fullName>
    <label>Interview History &amp; Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>