brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Interview_Support_Person__c.field-meta.xml
<CustomField>
    <fullName>Interview_Support_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Support Person</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Internal Interviews (Interview Support Person)</relationshipLabel>
    <relationshipName>Internal_Interviews1</relationshipName>
    <type>Lookup</type>
</CustomField>