brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Type</label>
    <referenceTo>Interview_Type__c</referenceTo>
    <relationshipLabel>Internal Interviews</relationshipLabel>
    <relationshipName>Internal_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>