brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Internal_Interviews</relationshipLabel>
    <relationshipName>Internal_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>