brain/sources/prod-metadata/objects/Internal_Interview__c/fields/IR_Feedback__c.field-meta.xml
<CustomField>
    <fullName>IR_Feedback__c</fullName>
    <label>IR Feedback</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>