brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Is_Final_Week_Mock__c.field-meta.xml
<CustomField>
    <fullName>Is_Final_Week_Mock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this Mock Interview is the FINAL-week mock (scheduled on Program_Version.Mock_Final_Day inside the last training week itself, not on the following Regular Day). Used for portal display badge and any final-mock-specific logic.</description>
    <label>Is Final Week Mock</label>
    <type>Checkbox</type>
</CustomField>