brain/sources/prod-metadata/objects/Internal_Interview__c/fields/IS_Improvement_Feedback__c.field-meta.xml
<CustomField>
    <fullName>IS_Improvement_Feedback__c</fullName>
    <label>IS Improvement  Feedback</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>