brain/sources/prod-metadata/objects/Internal_Interview__c/fields/JD_Link__c.field-meta.xml
<CustomField>
    <fullName>JD_Link__c</fullName>
    <label>JD Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>