brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Last_Result_Reminder_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Result_Reminder_At__c</fullName>
    <description>Timestamp of the most recent result-reminder email sent for this mock. Used with Result_Reminder_Count__c to prevent duplicate sends and for auditing/debugging. Populated by MockDeadlineEnforcer.sendResultReminders.</description>
    <inlineHelpText>When the most recent reminder email was sent. Auto-managed by MockDeadlineEnforcer.</inlineHelpText>
    <label>Last Result Reminder At</label>
    <type>DateTime</type>
</CustomField>