brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Launch_mode__c.field-meta.xml
<CustomField>
    <fullName>Launch_mode__c</fullName>
    <label>Launch mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Techsara&apos;s Magic</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>