brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Internal Interviews</relationshipLabel>
    <relationshipName>Internal_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>