brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Mock_Status__c.field-meta.xml
<CustomField>
    <fullName>Mock_Status__c</fullName>
    <label>Mock Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>