brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Niche__c.field-meta.xml
<CustomField>
    <fullName>Niche__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Niche</label>
    <referenceTo>Niche__c</referenceTo>
    <relationshipLabel>Internal Interviews</relationshipLabel>
    <relationshipName>Internal_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>