brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Postion__c.field-meta.xml
<CustomField>
    <fullName>Postion__c</fullName>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>