brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Previous_internal_interview__c.field-meta.xml
<CustomField>
    <fullName>Previous_internal_interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous internal interview</label>
    <referenceTo>Internal_Interview__c</referenceTo>
    <relationshipLabel>Internal Interviews</relationshipLabel>
    <relationshipName>Internal_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>