brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Result_Reminder_Count__c.field-meta.xml
<CustomField>
    <fullName>Result_Reminder_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many reminder emails have been sent to the interviewer to record the mock&apos;s Human_Decision. 0 = none, 1 = first sent (interviewer only, at mock end + 4 hours), 2 = second sent (interviewer + assigned trainer, at mock end + 7 hours). Cap at 2. Populated by MockDeadlineEnforcer.sendResultReminders.</description>
    <inlineHelpText>Number of result-reminder emails sent (0, 1, or 2). Auto-managed by MockDeadlineEnforcer.</inlineHelpText>
    <label>Result Reminder Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>