brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <label>Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Round</valueSetName>
    </valueSet>
</CustomField>