brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Round_Info__c.field-meta.xml
<CustomField>
    <fullName>Round_Info__c</fullName>
    <label>Round Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Round_Info</valueSetName>
    </valueSet>
</CustomField>