brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Round_Rank__c.field-meta.xml
<CustomField>
    <fullName>Round_Rank__c</fullName>
    <label>Round Rank</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>