brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <label>Date Of Interview</label>
    <type>Date</type>
</CustomField>