brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Selected_Time_Zone_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Selected_Time_Zone_End_Time__c</fullName>
    <label>Selected Time Zone End  Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Times</valueSetName>
    </valueSet>
</CustomField>