brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Selected_Time_Zone_Start_Tim__c.field-meta.xml
<CustomField>
    <fullName>Selected_Time_Zone_Start_Tim__c</fullName>
    <label>Selected Time Zone Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Times</valueSetName>
    </valueSet>
</CustomField>