brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Start_Time_IST__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_IST__c</fullName>
    <label>Start Time IST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>