brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Support_Block_End__c.field-meta.xml
<CustomField>
    <fullName>Support_Block_End__c</fullName>
    <description>Backend-only. Absolute (UTC) end instant of this internal interview, auto-derived from End Time IST by the Internal_Interview_Set_Support_Block_Times flow. Used as the time source for the support-availability scheduled path. Do not edit manually.</description>
    <label>Support Block End</label>
    <type>DateTime</type>
</CustomField>