brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Support_Block_Start__c.field-meta.xml
<CustomField>
    <fullName>Support_Block_Start__c</fullName>
    <description>Backend-only. Absolute (UTC) start instant of this internal interview, auto-derived from Start Time IST by the Internal_Interview_Set_Support_Block_Times flow. Used as the time source for the support-availability scheduled path. Do not edit manually.</description>
    <label>Support Block Start</label>
    <type>DateTime</type>
</CustomField>