brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Triggered_By_Step__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Mock Interviews created under Custom (After Specific Steps) cadence: the CandidateTrainingStep whose completion triggered this mock. Enables portal to show &quot;Mock after step 6&quot; or the step&apos;s name instead of a generic Week number. Blank for Weekly / Once / End of Program cadences.</description>
    <label>Triggered By Step</label>
    <referenceTo>CandidateTrainingStep__c</referenceTo>
    <relationshipLabel>Mocks Triggered By This Step</relationshipLabel>
    <relationshipName>Mocks_Triggered</relationshipName>
    <type>Lookup</type>
</CustomField>