brain/sources/prod-metadata/objects/Internal_Interview__c/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <description>Which training week this mock closes: 1, 2, 3, ... For a 3-week training with Weekly cadence, you&apos;d expect 3 Mock Interview records with Week_Number 1, 2, 3.</description>
    <label>Week Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>