brain/sources/prod-metadata/objects/Internal_Interview__c/validationRules/Lock_Rescheduled_Session.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Rescheduled_Session</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISPICKVAL(PRIORVALUE(Status__c), &quot;Rescheduled&quot;)

)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>This record is locked because the session status is already Rescheduled.</errorMessage>
</ValidationRule>